# compressor

./: CMakeLists.txt  LICENSE  pyproject.toml
.github/workflows/: release.yaml  tests.yaml
compressor/: __init__.py  cli.py
include/: compression_type.hpp  compressor_factory.hpp  rle.hpp  utils.hpp
shrinkr/: __init__.py  cli.py
src/: bindings.cpp  main.cpp  rle.cpp  utils.cpp
src/algorithms/: rle.cpp
tests/: test_compressor.py
