[build-system]
requires = ["scikit-build-core", "pybind11>=2.10", "wheel"]
build-backend = "scikit_build_core.build"

[project]
name = "shrinkr"
version = "0.0.2"
description = "Fast C++ byte compression library for Python"
readme = "README.md"
authors = [{name = "leosalgado"}]
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: C++",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"

[project.scripts]
shrinkr = "shrinkr.cli:main"
